testing/errors/forcebit2.a
;ACME 0.96.5
	!set label+2 = [1, 2, 3]
